@@ -47,7 +47,7 @@ fi
 
 ($AUTOMAKE --version) < /dev/null > /dev/null 2>&1 || {
     echo
-    echo "You must have automake 1.7.x installed to compile $PROJECT."
+    echo "You must have automake 1.9.x installed to compile $PROJECT."
     echo "Install the appropriate package for your distribution,"
     echo "or get the source tarball at http://ftp.gnu.org/gnu/automake/"
     DIE=1
@@ -56,7 +56,7 @@ fi
 (grep "^AM_PROG_LIBTOOL" configure.in >/dev/null) && {
   ($LIBTOOL --version) < /dev/null > /dev/null 2>&1 || {
     echo
-    echo "You must have libtool 1.4 installed to compile $PROJECT."
+    echo "You must have libtool 1.5 installed to compile $PROJECT."
     echo "Install the appropriate package for your distribution,"
     echo "or get the source tarball at http://ftp.gnu.org/gnu/libtool/"
     echo "(or a newer version if it is available)"
