@@ -91,7 +91,6 @@ src/planner-task-dialog.c
 src/planner-task-popup.c
 src/planner-task-tree.c
 src/planner-task-view.c
-src/planner-usage-print.c
 src/planner-usage-row.c
 src/planner-usage-tree.c
 src/planner-usage-view.c
