@@ -9,3 +9,4 @@ data/planner.desktop.in
 eds-backend/e-cal-backend-planner.c
 eds-backend/planner-source/planner-source.c
 
+src/planner-usage-print.c
