@@ -1,6 +1,7 @@
 2005-04-16  Richard Hult  <richard@imendio.com>
 
-	* POTFILES.in: Remove file.
+	* POTFILES.in:
+	* POTFILES.skip: Clean up.
 
 2005-04-15  Miloslav Trmac  <mitr@volny.cz>
 
