@@ -1,5 +1,16 @@
 2005-04-16  Richard Hult  <richard@imendio.com>
 
+	* autogen.sh:
+	* data/Makefile.am:
+	* libplanner/Makefile.am:
+	* libplanner/mrp-marshal-main.c:
+	* python/Makefile.am:
+	* src/Makefile.am:
+	* src/planner-marshal-main.c:
+	* src/planner-usage-view.c: Clean up and build.
+
+2005-04-16  Richard Hult  <richard@imendio.com>
+
 	* src/planner-usage-*: Rename from planner-ttable-*.
 
 	* src/Makefile.am: Reorganize views and make them
